Proyecto Mi blog- mejora en archivo styles

--- a/html/pq_zontes.html
+++ b/html/pq_zontes.html
@@ -83,19 +83,19 @@
             </div>
             <!--Fin de SideBar-->                  
             <section class="seccion_main1_home">
-                <p class="p_sect_uno">Esta marca china, se ha puesto las pilas en hacer algo genuino… de tal forma que más del 85% de los componentes es Zontes… además, contienen unos frenos de muy buena calidad marca discos ABS Bosch 9.1M en ambos trenes (desconectable, por cierto).</p>              
+                <p class="p_sect">Esta marca china, se ha puesto las pilas en hacer algo genuino… de tal forma que más del 85% de los componentes es Zontes… además, contienen unos frenos de muy buena calidad marca discos ABS Bosch 9.1M en ambos trenes (desconectable, por cierto).</p>              
                 <img class="img_u" src="../imag/freno_p1.jpg" alt="Freno delantero de Zonte">
                 <img class="img_a" src="../imag/freno_t_p1.jpg" alt="Freno trasero de Zonte">
                 <img id="foto_h1_3" class="img_c" src="../imag/chasis_p1.jpg" alt="Chasis de Zonte">          
             </section>
             <section class="seccion_main2_home">    
-                <p class="p_sect_dos">Sistema de inyección electrónica Delphi, muy confiable de por cierto. Su chasis es tubular, de tal forma que en su interior circula aceite para colabora en la refrigeración del motor y de la caja de cambios que es de 6 velocidades.</p>               
+                <p class="p_sect">Sistema de inyección electrónica Delphi, muy confiable de por cierto. Su chasis es tubular, de tal forma que en su interior circula aceite para colabora en la refrigeración del motor y de la caja de cambios que es de 6 velocidades.</p>               
                 <img class="img_u" src="../imag/inyector_p1.jpg" alt="Foto del motor">
                 <img class="img_a" src="../imag/bastidor_p1.jpg" alt="Foto del chasis">
                 <img id="foto_h2_3" class="img_c" src="../imag/motor_p1.jpg" alt="Foto del motor gral">           
             </section>
             <section class="seccion_main3_home">           
-                <p class="p_sect_tres">Les comento que me encanta la tecnología… en este sentido, esta moto tiene mucho. Además, al ser una marca de origen chino (vieron que son un poco bolados en su arte), el diseño es un tanto futurista con sus perfiles, colores y luces.</p>                
+                <p class="p_sect">Les comento que me encanta la tecnología… en este sentido, esta moto tiene mucho. Además, al ser una marca de origen chino (vieron que son un poco bolados en su arte), el diseño es un tanto futurista con sus perfiles, colores y luces.</p>                
                 <img class="img_u" src="../imag/luces_p1.jfif" alt="Foto las suces">
                 <img class="img_a" src="../imag/comando_p1.jpg" alt="Foto del comando">
                 <img id="foto_h3_3" class="img_c" src="../imag/parabrisa_p1.jfif" alt="Foto del parabrisa">              
