--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
         </div>
         <!--Fin de SideBar-->
         <section class="seccion_main1_home">
-            <p class="p_sect_uno">Un medio de transporte que me lleve a practicar el deporte que me apasiona que es el tenis de mesa…</p>                
+            <p class="p_sect">Un medio de transporte que me lleve a practicar el deporte que me apasiona que es el tenis de mesa…</p>                
             <img class="img_u" src="imag/tenis2.jfif" alt="Foto 2 moto para tenis">
             <img class="img_a" src="imag/tenis3.jfif" alt="Foto 3 moto para tenis">
             <img id="foto_h1_3" class="img_c" src="imag/tenis4.jfif" alt="Foto 4 moto para tenis">           
         </section>
         <section class="seccion_main2_home">
-            <p class="p_sect_dos">Un medio de transporte que me lleve a disfrutar de mi hobby… y adivinen cual es???</p>                          
+            <p class="p_sect">Un medio de transporte que me lleve a disfrutar de mi hobby… y adivinen cual es???</p>                          
             <img class="img_u" src="imag/teles3.jfif" alt="Foto 4 moto hobby">
             <img class="img_a" src="imag/teles5.jfif" alt="Foto 4 moto hobby">
             <img id="foto_h2_3" class="img_c" src="imag/teles7.jfif" alt="Foto 4 moto hobby">       
         </section>
         <section class="seccion_main3_home">         
-            <p class="p_sect_tres">Y compartir esta pasión con aquellos que les gusta como ser mis hermanos, hijos y amigos…</p>                     
+            <p class="p_sect">Y compartir esta pasión con aquellos que les gusta como ser mis hermanos, hijos y amigos…</p>                     
             <img class="img_u" src="imag/moto1.jpeg" alt="Foto 1 moto salida">
             <img class="img_a" src="imag/moto2.jpeg" alt="Foto 2 moto salida">
             <img id="foto_h3_3" class="img_c" src="imag/moto3.jpeg" alt="Foto 3 moto salida">                     
